# pdfsearch

./: .gitignore  .travis.yml  Doxyfile  INSTALL  Makefile  Makefile.am  README  README.md  TODO  autogen.sh  common.mk  configure.ac  configure_debug.sh
doc/: Doxyfile  Makefile.am  pdfsearch.1  pdfsearch.pod
doc/html/: annotated.html  bug.html  classPdfsearch_1_1Database.html  classPdfsearch_1_1DatabaseError.html  classPdfsearch_1_1Options.html  classPdfsearch_1_1Pdf.html  classPdfsearch_1_1ResultRowIterator.html  classPdfsearch_1_1Statement.html  classes.html  config_8h_source.html  database_8h_source.html  database__error_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_type.html  functions_vars.html  hierarchy.html  index.html  options_8h_source.html  pages.html  pdf_8h_source.html  resultrowiterator_8h_source.html  statement_8h_source.html  structPdfsearch_1_1Config.html  structPdfsearch_1_1QueryResult.html
doc/html/search/: all_62.js  all_63.js  all_64.js  all_6e.js  all_6f.js  all_70.js  all_71.js  all_72.js  all_73.js  all_75.js  classes_63.js  classes_64.js  classes_6f.js  classes_70.js  classes_71.js  classes_72.js  classes_73.js  enums_73.js  enumvalues_72.js  enumvalues_75.js  functions_62.js  functions_63.js  functions_64.js  functions_65.js  functions_66.js  functions_67.js  functions_69.js  functions_6f.js  functions_70.js  functions_71.js  functions_72.js  functions_73.js  functions_75.js  functions_76.js  functions_7e.js  search.js  typedefs_73.js  variables_63.js  variables_64.js  variables_70.js
doc/man/man3/: Pdfsearch_Config.3  Pdfsearch_Database.3  Pdfsearch_DatabaseError.3  Pdfsearch_Options.3  Pdfsearch_Pdf.3  Pdfsearch_QueryResult.3  Pdfsearch_ResultRowIterator.3  Pdfsearch_Statement.3  _home_john_koodaus_c___pdfsearch___src_.3  bug.3
src/: Makefile.am  config.h  database.cpp  database.h  database_error.h  main.cpp  options.cpp  options.h  pdf.cpp  pdf.h  resultrowiterator.h  statement.cpp  statement.h
tests/: 00-options.cpp  01-database.cpp  02-database_error.cpp  03-pdf.cpp  04-statement.cpp  05-resultrowiterator.cpp  Makefile.am  existing_testdb.sqlite  invalid.conf  test.cpp  test.h  test1.conf
